remove search/replace bar from view bar, to minimize the height

BUG: 205715